@@ -1,9 +1,10 @@
+
 /*
  ************************************************************************
  *******************  CANADIAN ASTRONOMY DATA CENTRE  *******************
  **************  CENTRE CANADIEN DE DONNÉES ASTRONOMIQUES  **************
  *
- *  (c) 2015.                            (c) 2015.
+ *  (c) 2018.                            (c) 2018.
  *  Government of Canada                 Gouvernement du Canada
  *  National Research Council            Conseil national de recherches
  *  Ottawa, Canada, K1A 0R6              Ottawa, Canada, K1A 0R6
@@ -66,69 +67,54 @@
  ************************************************************************
  */
 
-package ca.nrc.cadc.search;
+package ca.nrc.cadc.search.util;
 
-import ca.nrc.cadc.auth.AuthMethod;
-import ca.nrc.cadc.reg.Standards;
-import ca.nrc.cadc.reg.client.RegistryClient;
-import ca.nrc.cadc.web.ConfigurableServlet;
-import org.apache.http.client.utils.URIBuilder;
+import org.junit.Test;
+import ca.nrc.cadc.AbstractUnitTest;
 
 import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 
+import static org.easymock.EasyMock.createMock;
+import static org.easymock.EasyMock.expect;
+import static org.easymock.EasyMock.replay;
+import static org.easymock.EasyMock.reset;
+import static org.easymock.EasyMock.verify;
+import static org.junit.Assert.assertEquals;
 
-/**
- * Servlet to redirect a caller to the appropriate place for a single request
- * download of a single CAOM-2 URI.
- */
-public class PackageServlet extends ConfigurableServlet {
-    private static final String CAOM2PKG_SERVICE_URI_PROPERTY_KEY = "org.opencadc.search.caom2pkg-service-id";
-    private static final URI DEFAULT_CAOM2PKG_SERVICE_URI = URI.create("ivo://cadc.nrc.ca/caom2ops");
+public class DefaultJobURLCreatorTest extends AbstractUnitTest<DefaultJobURLCreator> {
+    @Test
+    public void createJobURL() throws Exception {
+        final HttpServletRequest mockRequest = createMock(HttpServletRequest.class);
+        final URL dataServiceURL = new URL("http://localhost/data/pub");
 
-    /**
-     * Only supported method.  This will accept an ID parameter in the request
-     * to query on.
-     *
-     * @param request  The HTTP Request.
-     * @param response The HTTP Response.
-     * @throws IOException      Any other errors.
-     */
-    @Override
-    protected void doGet(final HttpServletRequest request, final HttpServletResponse response) throws IOException {
-        try {
-            get(request, response, new RegistryClient());
-        } catch (URISyntaxException e) {
-            throw new IOException(e);
-        }
-    }
+        setTestSubject(new DefaultJobURLCreator());
+
+        expect(mockRequest.getPathInfo()).andReturn("/COLLECTION/OBSID_PREV_256.JPG").once();
+
+        replay(mockRequest);
+
+        final URL expectedURL = new URL("http", "localhost",
+            "/data/pub/COLLECTION/OBSID_PREV_256.JPG");
+        final URL url = getTestSubject().create(dataServiceURL, mockRequest);
+        assertEquals("Expected URL is not what was generated.", expectedURL, url);
+
+        verify(mockRequest);
 
 
-    /**
-     * Handle a GET request with the given Registry client to perform the lookup.
-     *
-     * @param request        The HTTP Request.
-     * @param response       The HTTP Response.
-     * @param registryClient The RegistryClient to do lookups.
-     * @throws IOException        Any request access problems.
-     * @throws URISyntaxException For uri issues.
-     */
-    void get(final HttpServletRequest request, final HttpServletResponse response, final RegistryClient registryClient)
-        throws IOException, URISyntaxException {
-        final URL serviceURL = registryClient.getServiceURL(getServiceID(CAOM2PKG_SERVICE_URI_PROPERTY_KEY,
-                                                                         DEFAULT_CAOM2PKG_SERVICE_URI),
-                                                            Standards.PKG_10, AuthMethod.COOKIE);
+        // TEST 2
+        reset(mockRequest);
 
-        final URIBuilder builder = new URIBuilder(serviceURL.toURI());
+        expect(mockRequest.getPathInfo()).andReturn("/COLLECTION/OBSID_PREV 256.JPG").once();
 
-        for (final String IDValue : request.getParameterValues("ID")) {
-            builder.addParameter("ID", IDValue);
-        }
+        replay(mockRequest);
 
-        response.sendRedirect(builder.build().toURL().toExternalForm());
+        final URL expectedURL2 =
+            new URL("http", "localhost",
+                "/data/pub/COLLECTION/OBSID_PREV+256.JPG");
+        final URL url2 = getTestSubject().create(dataServiceURL, mockRequest);
+        assertEquals("Expected URL is not what was generated.", expectedURL2, url2);
+
+        verify(mockRequest);
     }
 }
